--- a/sticky/css/main.css
+++ b/sticky/css/main.css
@@ -338,11 +338,11 @@ footer {
   }
 }
 
+.header {
+  background-color: white;
+  transition: 1s;
+}
 
-
-
-
-
-
-
-
+.is-sticky .header {
+  background-color: black;
+}
